added parent components and crude login logic (without passport)

--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,13 @@
   <script src="https://use.fontawesome.com/556453154e.js"></script>
 </head>
 <body>
-  <main>
-    <!-- React app -->
-    <div id="app"></div>
-  </main>
+  <!-- React app -->
+  <div id="app"></div>
   <!-- jQuery and Matierialize script links -->
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
   <!-- Link to bundle.js for React -->
   <script type="text/javascript" src="bundle.js"></script>
+  <script type="text/javascript" src="/assets/js/script.js"></script>
 </body>
 </html>
