--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <title>You-Queue</title>
   <!-- Viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="favicon.png" sizes="16x16" type="image/png"/>
   <!-- Google Fonts Links -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Kaushan+Script|Shadows+Into+Light" rel="stylesheet"/>
